# OrgaCompu-TP2

./: CMakeLists.txt  Makefile  README.md  addressHelper.c  addressHelper.h  cache.c  cache.h  cache_block.c  cache_block.h  command.c  command.h  commandExecutor.c  commandExecutor.h  commandParser.c  commandParser.h  fileReader.c  fileReader.h  main.c  mainMemory.c  mainMemory.h  queue.h  set.c  set.h  strutil.c  strutil.h  way.c  way.h
tests/: hitTest.mem  missTest.mem  prueba6.mem  replacementTest.mem
